added formatted file size to memorylist

--- a/bin/.memories.yaml
+++ b/bin/.memories.yaml
@@ -1,17 +1,19 @@
 ---
 :memoryname: 5nebel.tmx
-:imported: 2013-02-12 at 10:23:40
+:size: 0.03 MB
+:imported: 2013-02-12 at 10:29:53
 :previouswrite: 2008-02-24 at 14:36:44
-:previousread: 2013-02-12 at 10:22:31
+:previousread: 2013-02-12 at 10:29:15
 :owner: vincevincent
 :tags:
 - MECHENG
 - ELECENG
 ---
 :memoryname: 4metarack.tmx
-:imported: 2013-02-12 at 10:23:40
+:size: 2.18 MB
+:imported: 2013-02-12 at 10:29:53
 :previouswrite: 2007-11-01 at 19:45:50
-:previousread: 2013-02-12 at 10:22:30
+:previousread: 2013-02-12 at 10:29:15
 :owner: vincevincent
 :tags:
 - MECHENG
